--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,21 @@ body {
 .container {
     border: 6px solid black;
     display: grid;
-    grid-template-columns: repeat(6,200px)
-  
+    height: 800px;
+    /* grid-template-columns: repeat(3,2fr);
+    grid-template-rows: repeat(2,200px)   */
+    grid-template: repeat(3,200px)/repeat(3,200px);
+
+    /* column-gap: 20px;
+    row-gap: 20px; */
+    /* gap: 10px 20px; */
+
+    /* justify-items: center;
+    align-items: center; */
+    /* place-items: center; */
+
+    justify-content: space-evenly;
+    align-content: space-evenly;
 }
 
 .grid-item {
